--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,7 +2,7 @@ style = default
 align = true
 maxColumn = 100
 project.includeFilters =[
-	".*[.]scala$"
-	"project.*[.]sbt$"
+	".*/src/.*[.]scala$"
+	".*/project/.*[.]sbt$"
 	"build.sbt"
 ]
